TATI_models_trajectories_PYTHON = \
    trajectory_base.py \
    trajectory_sampling.py \
    trajectory_sampling_factory.py \
    trajectory_sampling_hamiltonian.py \
    trajectory_sampling_langevin.py \
    trajectory_training.py \
	trajectorydata.py \
    trajectorystate.py \
    __init__.py

TATI_models_trajectoriesdir = $(pythondir)/TATi/models/trajectories
