TATI_samplers_dynamics_PYTHON = \
    baoabsampler.py \
    covariancecontrolledadaptivelangevinthermostatsampler.py \
	gradientdescent.py \
	geometriclangevinalgorithmfirstordersampler.py \
	geometriclangevinalgorithmsecondordersampler.py \
	hamiltonianmontecarlosamplerfirstordersampler.py \
	hamiltonianmontecarlosamplersecondordersampler.py \
	walkerensembleoptimizer.py \
	stochasticgradientlangevindynamicssampler.py \
	__init__.py

TATI_samplers_dynamicsdir = $(pythondir)/TATi/samplers/dynamics/
